# High-Performance-MPMC

./: .gitignore  CMakeLists.txt  README.md
bench/: bench_mpmc.cpp
docs/: PROJECT_FILE_GUIDE.md  profiling_report.md
docs/images/: profiling_runs_summary.csv  profiling_symbol_distribution_table.csv
include/: mpmc_bounded_queue.hpp
scripts/: plot_benchmarks.py  plot_profiling_runs.py  profile.sh  run_dense_bench.py
tests/: test_mpmc.cpp
